--- a/frontend/webapp/templates/dashboard.html
+++ b/frontend/webapp/templates/dashboard.html
@@ -1,59 +1,108 @@
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Dashboard of Upload and Preview</title>
+    <meta charset="UTF-8">
+    <title>Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="../static/common.css"/>
+    <link rel="stylesheet" type="text/css" href="../static/main.css"/>
+    <script type="text/javascript" src="../static/modernizr.min.js"></script>
 </head>
 <body>
-    <h1>Choose your CSV or XES file to upload</h1>
-    <div class="div1">
-        <input type="file" name="" id="file" class="file" onchange="textMess(this.files)">
-        <!-- <button type="submit">Submit</button> -->
-        <hr>
-        Preview:
-        <div id="div2"></div>
-    </div>
-    <style>
-        #div2{
-            border:1px solid black;
-            overflow:auto;
-            height:350px;
+<div class="topbar-wrap white">
+    <div class="topbar-inner clearfix">
+        <div class="topbar-logo-wrap clearfix">
+            <h1 class="topbar-logo none"><a href="index.html" class="navbar-brand">Dashboard</a></h1>
+            <ul class="navbar-list clearfix">
+                <li><a class="on" href="index.html">Dashboard</a></li>
+            </ul>
+        </div>
+        <div class="top-info-wrap">
+            <ul class="top-info-list clearfix">
+                <li><a href="#">admin</a></li>
+                <li><a href="login.html">log out</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="container clearfix">
+    <div class="sidebar-wrap">
+        <div class="sidebar-title">
+            <h1>Menu</h1>
+        </div>
+        <div class="sidebar-content">
+            <ul class="sidebar-list">
+                <li>
+                    <a href="#"><i class="icon-font">&#xe003;</i>Actions</a>
+                    <ul class="sub-menu">
+                        <li><a href=""><i class="icon-font">&#xe008;</i>Upload</a></li>
+                        <li><a href=""><i class="icon-font">&#xe005;</i>placeholder1</a></li>
+                        <li><a href=""><i class="icon-font">&#xe006;</i>placeholder2</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#"><i class="icon-font">&#xe018;</i>Settings</a>
+                    <ul class="sub-menu">
+                        <li><a href=""><i class="icon-font">&#xe017;</i>Settings</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!--/sidebar-->
+    <div class="main-wrap">
+        <div class="crumb-wrap">
+            <div class="crumb-list"><i class="icon-font">&#xe06b;</i><span>Welcome to Process Mining Group Hadoop Dashboard!</span></div>
+        </div>
+        <div class="result-wrap">
+            <div class="result-title">
+                <h1></h1>
+            </div>
+            <!-- <div class="result-content">
+                <div class="short-wrap">
+                    <a href="#"><i class="icon-font">&#xe001;</i>新增作品</a>
+                    <a href="#"><i class="icon-font">&#xe005;</i>新增博文</a>
+                    <a href="#"><i class="icon-font">&#xe048;</i>新增作品分类</a>
+                    <a href="#"><i class="icon-font">&#xe041;</i>新增博客分类</a>
+                    <a href="#"><i class="icon-font">&#xe01e;</i>作品评论</a>
+                </div>
+            </div> -->
+        </div>
+        <div class="result-wrap">
+            <div class="result-title">
+                <h1>Upload your CSV or XES file here:</h1>
+            </div>
+            <div class="result-content">
+                <ul class="list">
+                    <li>
+                        <input type="file" name="" id="file" class="file" onchange="textMess(this.files)">
+                    </li>
+                    <br>
+                    Raw data preview:
+                </ul>
+                <div id="div2"></div>
+                <br>
+                <button id="submit1" type="submit">Submit</button>
+                <br><br>
+            </div>
+        </div>
+    </div>
+    <!--/main-->
+</div>
+<script>
+    function textMess(file){
+        var mess = file[0];
+        if(!mess.type.match('\.csv','\.xes')){
+            document.getElementById("div2").innerText = " ";
+            window.alert("Only CSV or XES file is supported!");
+            return;
         }
-    </style>
-
-    <script>
-        function textMess(file){
-            var mess = file[0];
-            if(!mess.type.match('\.csv','\.xes')){
-                window.alert("Only CSV or XES file is supported!");
-                return;
-            }
-            var file = new FileReader();
-            file.readAsText(mess);
-            file.onload = function(e){
-                var htmlCode = e.target.result;
-                document.getElementById("div2").innerText = htmlCode;
-            }
-        }
-    </script>
-
-    <button id="submit1" type="submit">Submit</button>
-
-    <style>
-        #submit1{
-            font-size: 14px;
-            font-family: sans-serif;
-            
-            width: 120px;
-            height: 28px;
-            line-height: 28px;
-            text-align: center;
-            
-            color: white;
-            background-color: #00001a;
-            border-radius: 6px;
-            border: 0;
-            
-            float: right;
-        }
-    </style>
+        var file = new FileReader();
+        file.readAsText(mess);
+        file.onload = function(e){
+            var htmlCode = e.target.result;
+            document.getElementById("div2").innerText = htmlCode;
+        }
+    }
+</script>
 </body>
 </html>
