Default with login info.

--- a/frontend/webapp/templates/login.html
+++ b/frontend/webapp/templates/login.html
@@ -13,8 +13,8 @@
  
     <form method="post" action="login.js">
  
-        <p><label class="label_input">Username</label><input type="text" id="username" class="text_field"/></p>
-        <p><label class="label_input">Password</label><input type="password" id="password" class="text_field"/></p>
+        <p><label class="label_input">Username</label><input type="text" id="username" class="text_field" value="admin" /></p>
+        <p><label class="label_input">Password</label><input type="password" id="password" class="text_field" value="admin" /></p>
  
         <div id="login_control">
             <input type="button" id="btn_login" value="Login" onclick="login();"/>
