--- a/frontend/webapp/templates/dashboard.html
+++ b/frontend/webapp/templates/dashboard.html
@@ -51,7 +51,7 @@
     <!--/sidebar-->
     <div class="main-wrap">
         <div class="crumb-wrap">
-            <div class="crumb-list"><i class="icon-font">&#xe06b;</i><span>Welcome to Process Mining Group Hadoop Dashboard!</span></div>
+            <div class="crumb-list"><i class="icon-font">&#xe06b;</i><span>Welcome to Process Mining Group Hadoop's Dashboard!</span></div>
         </div>
         <div class="result-wrap">
             <div class="result-title">
