--- a/frontend/webapp/templates/dashboard.html
+++ b/frontend/webapp/templates/dashboard.html
@@ -13,7 +13,7 @@
         <div class="topbar-logo-wrap clearfix">
             <h1 class="topbar-logo none"><a href="index.html" class="navbar-brand">Dashboard</a></h1>
             <ul class="navbar-list clearfix">
-                <li><a class="on" href="index.html">Dashboard</a></li>
+                <li><a class="on" href="#">Dashboard</a></li>
             </ul>
         </div>
         <div class="top-info-wrap">
