--- a/frontend/webapp/templates/dashboard.html
+++ b/frontend/webapp/templates/dashboard.html
@@ -19,7 +19,7 @@
         <div class="top-info-wrap">
             <ul class="top-info-list clearfix">
                 <li><a href="#">admin</a></li>
-                <li><a href="login.html">log out</a></li>
+                <li><a href="{{ url_for('login') }}">log out</a></li>
             </ul>
         </div>
     </div>
