--- a/frontend/webapp/templates/login.html
+++ b/frontend/webapp/templates/login.html
@@ -3,7 +3,7 @@
     <title>Welcome</title>
 
     <link rel="stylesheet" type="text/css" href="../static/login.css"/>
-    <script type="text/javascript" src="../static/login.js"></script>
+    <script type="text/javascript" src="../static/login.js?v=1"></script>
 </head>
 
 <body>
