--- a/backend/app/src/templates/unauthorized.html
+++ b/backend/app/src/templates/unauthorized.html
@@ -1,3 +1,4 @@
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Unauthorized</title>
@@ -8,3 +9,4 @@
     Uncorrect path, please refer to the manual.
   </p>
 </body>
+</html>
