--- a/backend/app/src/templates/mr.html
+++ b/backend/app/src/templates/mr.html
@@ -1,5 +1,5 @@
 <body>
-<form action="{{ url_for('/api/mr') }}" method="post">
+<form action="{{ url_for('api/mr') }}" method="post">
   <input type="text" name="header">
   <input type="submit">
 </form>
