--- a/frontend/webapp/templates/dashboard.html
+++ b/frontend/webapp/templates/dashboard.html
@@ -35,7 +35,7 @@
                     <a href="#"><i class="icon-font">&#xe003;</i>Actions</a>
                     <ul class="sub-menu">
                         <li><a href=""><i class="icon-font">&#xe008;</i>Upload</a></li>
-                        <li><a href=""><i class="icon-font">&#xe005;</i>Result Page</a></li>
+                        <li><a href="/result"><i class="icon-font">&#xe005;</i>Result Page</a></li>
                         <!-- <li><a href=""><i class="icon-font">&#xe006;</i>placeholder2</a></li> -->
                     </ul>
                 </li>
