--- a/frontend/webapp/templates/result.html
+++ b/frontend/webapp/templates/result.html
@@ -72,7 +72,7 @@
                     </li> -->
                     <!-- Raw data preview: -->
                 </ul>
-                <img src="static/output/output.png" />
+                <img src="static/outputs/output.png" />
                 <!-- <img style="width:180px" src="data:;base64,{{ img_stream }}"> -->
                 <!-- <div id="div2"></div> -->
                 <br>
